<resources>
    <string name="app_name">Where\'s my Gas</string>

    <!-- SnackBar Actions -->
    <string name="snackbar_action_retry">RETRY</string>
    <string name="snackbar_action_permissions_request">REQUEST AGAIN</string>
    <string name="snackbar_action_wider_search">WIDER SEARCH</string>
    <string name="snackbar_action_activate_location">ACTIVATE</string>
    <string name="snackbar_action_select_location">SELECT</string>

    <!-- SnackBar Messages  -->
    <string name="sb_text_retry_permissions_message">Location permission not granted! Nearby search not available</string>
    <string name="sb_text_activate_location">Location services not active! Nearby search not available</string>
    <string name="sb_text_response_null_message">No results returned from search!</string>
    <string name="sb_text_response_failed_request">An error occurred, please try again!</string>
    <string name="sb_text_response_empty_list">No gas stations found in current area!</string>
    <string name="sb_text_error_failed_network_request">The network request has failed!</string>
    <string name="sb_text_no_internet_connectivity">No internet connection!</string>
    <string name="sb_text_no_place_selected">No place selected</string>
    <string name="sb_text_place_picker_cancelled">No location selected!</string>
    <string name="sb_text_unknown_location">Last location unknown</string>
    <string name="sb_text_google_play_services_error">Sorry, an error occurred (GooglePlayServices exception)</string>
    <string name="sb_text_navigation_is_not_possible">Sorry, there is no navigation software installed!</string>
    <string name="swipe_to_refresh">Swipe down to refresh</string>

    <!-- Widget config screen text -->
    <string name="add_widget">Add widget</string>
    <string name="widget_configure_text">Please select which Gas Stations to show in widget</string>
    <string name="widget_option_show_both">Show both (side by side)</string>
    <string name="widget_option_show_near">Show near only</string>
    <string name="widget_option_show_favorite">Show favorite only</string>
    <string name="sb_text_widget_no_selection">Please select an option.</string>
    <string name="widget_no_near_info">No near Gas Station found!</string>
    <string name="widget_no_favorite_info">No favorite Gas Station found!</string>

    <!-- menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>
    <string name="menu_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- info window -->
    <string name="gas_station_is_currently_open">Gas Station currently open?</string>
    <string name="gas_station_open">Yes, it\'s open.</string>
    <string name="gas_station_closed">No, it\'s closed.</string>
    <string name="gas_station_open_unknown">Unknown!</string>

    <string name="button_favorites_description">Toogle favorite gas station</string>
    <string name="button_directions_description">Get directions to gas station</string>
    <string name="gas_station_details">Gas Station details</string>
    <string name="select_location_content_desc">Select location to search for nearby Gas Stations</string>

    <!-- settings window -->
    <string name="pref_show_info_window_label">Show info option menu</string>
    <string name="pref_show_info_window_value_yes">Yes</string>
    <string name="pref_show_info_window_value_no">No</string>
    <string name="pref_units_option_value_metric">Metric (km - kilometers)</string>
    <string name="pref_units_option_value_imperial">Imperial (mi - miles)</string>
    <string name="pref_units_option_label">Unit of measure</string>
    <string name="pref_about_label">About</string>
    <string name="pref_about_summary">This is a simple app to search (nearby) gas stations</string>
    <string name="pref_view_my_apps">Check my other apps</string>
    <string name="pref_view_my_apps_text">Click to check my other apps on Google Play</string>
    <string name="pref_rate_me">Rate and Feedback</string>
    <string name="pref_rate_me_text">If you like this app please give it a good rating and review ☺\n(click to open Google Play)\nThanks!\n\t\t · Fernando Figueiredo\t\t@2021</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="pref_send_me_an_email">Send me an e-mail…</string>
    <string name="pref_send_me_an_email_text">Click here to send me suggestions or feedback by email. Thanks!</string>
    <string name="pref_darkmode_label">Dark Theme</string>
    <string name="pref_darkmode_use_system">Use system settings</string>
    <string name="pref_darkmode_use_disable">Disabled</string>
    <string name="pref_darkmode_use_enable">Enabled</string>

    <string name="closedQuestionText">Gas Station is closed! Do you really want to start navigation to it?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="SystemDarkModeIsActive" translatable="false">No</string>
</resources>