<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/info_window"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/info_window_shape"
    android:backgroundTint="@color/colorCardViewBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_gas_station_open_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/gas_station_is_currently_open"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_open_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_open_now"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/gas_station_open"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_gas_station_open_hours"
        app:layout_constraintTop_toBottomOf="@+id/tv_gas_station_open_hours" />

    <TextView
        android:id="@+id/tv_closed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_closed"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/gas_station_closed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_gas_station_open_hours"
        app:layout_constraintTop_toBottomOf="@+id/tv_open_now" />

    <TextView
        android:id="@+id/tv_unknown_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_open_unknown"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/gas_station_open_unknown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_gas_station_open_hours"
        app:layout_constraintTop_toBottomOf="@+id/tv_closed" />

</android.support.constraint.ConstraintLayout>
